src/objects/PFLSFTMA__TMA_Constants__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains all the constants for TMA</description>
    <fields>
        <fullName>PFLSFTMA__Canvas_App_Name__c</fullName>
        <label>Canvas App Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Create_FollowUp_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create/Update task if order is delivered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Create_Public_Tasks_For_Time_Based__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable/disable &quot;Public&quot; checkbox on a created task when the rule is triggered</inlineHelpText>
        <label>Create public tasks for TimeBased Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Create_Public_Tasks_For_Workflow__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enable/disable &quot;Public&quot; checkbox on a created task when the rule is triggered</inlineHelpText>
        <label>Create public tasks for Workflow Orders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Create_Task_Upon_Order_Shipped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create/Update task if order is shipped</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Create_task_upon_order_creation__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Create/Update task if order is created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Enable_Task_Notifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Task Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_City__c</fullName>
        <label>Touch Sender City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Company__c</fullName>
        <label>Touch Sender Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Country__c</fullName>
        <label>Touch Sender Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Email__c</fullName>
        <label>Touch Sender Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_First_Name__c</fullName>
        <label>Touch Sender First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Last_Name__c</fullName>
        <label>Touch Sender Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Phone__c</fullName>
        <label>Touch Sender Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Postal_Code__c</fullName>
        <label>Touch Sender Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_State__c</fullName>
        <label>Touch Sender State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_Street_Address__c</fullName>
        <label>Touch Sender Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Gift_Sender_User_ID__c</fullName>
        <label>Touch Sender User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Is_Api_User_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Api User Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Is_Triggers_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Trigger Evaluation Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Notification_User_ID__c</fullName>
        <label>Notification User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Order_Shipped_Task_Name__c</fullName>
        <defaultValue>&apos;TMA Shipped&apos;</defaultValue>
        <label>Order Shipped Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Send_Order_Batch_ID__c</fullName>
        <label>Send Order Batch ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Send_Order_Job_Name__c</fullName>
        <label>Send Order Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Send_Order_Job__c</fullName>
        <label>Send Order Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Send_TMA_Orders_Interval__c</fullName>
        <label>Send TMA Orders Interval</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Send_TMA_Orders_Scope__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Send TMA Orders Scope</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Send_TMA_Task_Name__c</fullName>
        <label>Order Placed Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Show_Community_Users__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Community Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Connection_Name__c</fullName>
        <label>TMA Connection Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__TMA_Delivered_Task_Name__c</fullName>
        <label>Order Delivered Task Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PFLSFTMA__Trigger_CPU_Time__c</fullName>
        <label>Trigger CPU Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TMA Constants</label>
</CustomObject>